--- a/contact.html
+++ b/contact.html
@@ -116,11 +116,11 @@
                                 <div class="hours-list">
                                     <div class="hour-item">
                                         <span data-th="จันทร์ - ศุกร์" data-en="Monday - Friday">จันทร์ - ศุกร์</span>
-                                        <span data-th="6:00 - 20:00 น." data-en="6:00 - 20:00">6:00 - 20:00 น.</span>
+                                        <span data-th="11.00-19.00 น." data-en="11.00-19.00">11.00-19.00 น.</span>
                                     </div>
                                     <div class="hour-item">
                                         <span data-th="เสาร์ - อาทิตย์" data-en="Saturday - Sunday">เสาร์ - อาทิตย์</span>
-                                        <span data-th="6:00 - 18:00 น." data-en="6:00 - 18:00">6:00 - 18:00 น.</span>
+                                        <span data-th="9.00-19.00 น." data-en="9.00-19.00">9.00-19.00 น.</span>
                                     </div>
                                 </div>
                             </div>
