--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                             <div class="contact-details">
                                 <h3 data-th="โทรศัพท์" data-en="Phone">โทรศัพท์</h3>
                                 <p>083-953-6664</p>
-                                <small data-th="เปิดรับสาย: จันทร์-อาทิตย์ 8:00-20:00 น." data-en="Available: Monday-Sunday 8:00-20:00">เปิดรับสาย: จันทร์-อาทิตย์ 8:00-20:00 น.</small>
+                                <small data-th="เปิดรับสาย: เสาร์-อาทิตย์ 9:00-19:00 น. / จันทร์-ศุกร์ 11:00-19:00 น." data-en="Available: Sat-Sun 9:00-19:00 / Mon-Fri 11:00-19:00">เปิดรับสาย: เสาร์-อาทิตย์ 9:00-19:00 น. / จันทร์-ศุกร์ 11:00-19:00 น.</small>
                             </div>
                         </div>
 
@@ -116,11 +116,11 @@
                                 <div class="hours-list">
                                     <div class="hour-item">
                                         <span data-th="จันทร์ - ศุกร์" data-en="Monday - Friday">จันทร์ - ศุกร์</span>
-                                        <span data-th="11.00-19.00 น." data-en="11.00-19.00">11.00-19.00 น.</span>
+                                        <span data-th="11:00 - 19:00 น." data-en="11:00 - 19:00">11:00 - 19:00 น.</span>
                                     </div>
                                     <div class="hour-item">
                                         <span data-th="เสาร์ - อาทิตย์" data-en="Saturday - Sunday">เสาร์ - อาทิตย์</span>
-                                        <span data-th="9.00-19.00 น." data-en="9.00-19.00">9.00-19.00 น.</span>
+                                        <span data-th="9:00 - 19:00 น." data-en="9:00 - 19:00">9:00 - 19:00 น.</span>
                                     </div>
                                 </div>
                             </div>
