--- a/courses.html
+++ b/courses.html
@@ -292,7 +292,7 @@
 
                     <div class="course-card">
                         <div class="course-header">
-                            <h3 data-th="หลักสูตรออกรอบเป็นเพื่อน" data-en="On-Course Companion Course">หลักสูตรออกกรอบเป็นเพื่อน</h3>
+                            <h3 data-th="หลักสูตรออกกรอบเป็นเพื่อน" data-en="On-Course Companion Course">หลักสูตรออกกรอบเป็นเพื่อน</h3>
                             <p class="course-duration" data-th="เต็มรอบ 18 หลุม" data-en="Full 18-hole round">เต็มรอบ 18 หลุม</p>
                         </div>
                         <div class="course-details">
